--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,14 @@ html, body, #root{
   height: 100%;
 }
 
+textarea, select, input, button { outline: none; }
+
 .dashboardHeader{
   display: flex;
   width: 100%;
   height: 50px;
   justify-content: space-around;
+  align-items: center;
   background-color: black;
   color: gold;
   /*border-width: medium;
@@ -26,13 +29,15 @@ html, body, #root{
   border-radius: 10px;
   background-color: rgba(255, 255, 255, .4);
   color: gold;
-  height: 80%;
+  height: 40px;
   width: 100px;
+  transition-duration: .2s;
 }
 
 .dashboardHeader button:hover{
   background-color: rgba(255, 255, 255, .8);
   color: black;
+  cursor: pointer;
 }
 
 .dashboardContainer{
@@ -70,4 +75,58 @@ html, body, #root{
 .dashboardContainer .content h1{
   color: white;
   text-align: center;
+}
+
+.homeHeader{
+  background-color: rgba(0,0,0,.5);
+}
+
+.homeHeader button{
+  background-color: initial;
+  border-radius: initial;
+  border-width: 0;
+}
+
+.Home .home-center-content{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.Home .home-center-content h1{
+  color: #ffef9c;
+  text-shadow: 0 0 10px black;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+.Home .home-center-content button{
+    display: inline-block;
+    font-size: 1em;
+    border-radius: 10px;
+    border-style: none;
+    border-width: thin;
+    color: white;
+    background-color: #8d8b7e94;
+    transition-duration: .5s;
+}
+
+.Home .home-center-content button:hover{
+    box-shadow: -5px 5px 20px rgba(0,0,0,.8);
+    cursor: pointer;
+}
+@keyframes bouncy {
+ 0%{top:0em}
+ 40%{top:0em}
+ 43%{top:-0.9em}
+ 46%{top:0em}
+ 48%{top:-0.4em}
+ 50%{top:0em}
+ 100%{top:0em;}
 }
