--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,10 @@ textarea, select, input, button { outline: none; }
   border-width: 0;
 }
 
+.headerButtons{
+  display: initial;
+}
+
 .Home .home-center-content{
   display:flex;
   justify-content: center;
@@ -151,6 +155,17 @@ textarea, select, input, button { outline: none; }
   display: flex;
   align-items: center;
 }
+
+@media only screen and (max-width:768px) {
+  /* For mobile phones: */
+  .headerButtons{
+    display: none;
+  }
+  .Login {
+    width: 50vh;
+  }
+}
+
 @keyframes bouncy {
  0%{top:0em}
  40%{top:0em}
